// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngressIpSelector can render 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        What's your ingress address? 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Assign the IP address that will be used for new routes and traffic managed by the ingress controller.
    </div>
    <div
      class="pf-l-stack__item"
    >
      
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 1"
        class="pf-c-form-control ip-triplet ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-0"
        type="text"
        value="192"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 2"
        class="pf-c-form-control ip-triplet ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-1"
        type="text"
        value="168"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 3"
        class="pf-c-form-control ip-triplet ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-2"
        type="text"
        value="007"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 4"
        class="pf-c-form-control ip-triplet ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-3"
        type="text"
        value="201"
      />
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    />
  </div>
</div>
`;

exports[`IngressIpSelector can render change value 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-4"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        What's your ingress address? 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Assign the IP address that will be used for new routes and traffic managed by the ingress controller.
    </div>
    <div
      class="pf-l-stack__item"
    >
      
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 1"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-13"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-0"
        type="text"
        value="222"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 2"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-14"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-1"
        type="text"
        value="221"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 3"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-15"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-2"
        type="text"
        value="255"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 4"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-16"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-3"
        type="text"
        value="010"
      />
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    />
  </div>
</div>
`;

exports[`IngressIpSelector can render non-default IP 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        What's your ingress address? 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Assign the IP address that will be used for new routes and traffic managed by the ingress controller.
    </div>
    <div
      class="pf-l-stack__item"
    >
      
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 1"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-5"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-0"
        type="text"
        value="012"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 2"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-1"
        type="text"
        value="221"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 3"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-7"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-2"
        type="text"
        value="255"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 4"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-8"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-3"
        type="text"
        value="010"
      />
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    />
  </div>
</div>
`;

exports[`IngressIpSelector can render validation error 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-3"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        What's your ingress address? 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Assign the IP address that will be used for new routes and traffic managed by the ingress controller.
    </div>
    <div
      class="pf-l-stack__item"
    >
      
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 1"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-9"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-0"
        type="text"
        value="123"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 2"
        class="pf-c-form-control ip-triplet ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-10"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-1"
        type="text"
        value="586"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 3"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-11"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-2"
        type="text"
        value="111"
      />
      .
      <input
        aria-invalid="false"
        aria-label="IP triplet, position 4"
        class="pf-c-form-control ip-triplet ip-triplet-success ip-triplet__wide"
        data-ouia-component-id="OUIA-Generated-TextInputBase-12"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe="true"
        data-testid="ip-triplet-3"
        type="text"
        value="002"
      />
      <svg
        aria-hidden="true"
        class="validation-icon"
        fill="#c9190b"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
    </div>
    <div
      class="pf-l-stack__item pf-m-fill"
    >
      <div
        class="address-validation-failed"
        data-testid="address-validation-failed"
      >
        Provided IP address is incorrect.
      </div>
    </div>
  </div>
</div>
`;
